// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all seasons with food Returns a full list of season data 1`] = `
Array [
  Object {
    "food": Array [
      Object {
        "id": "dd9ba012-8f8e-48af-9775-0139374dd94c",
        "imageUrlSmall": "https://apple.com",
        "name": "Apple",
      },
      Object {
        "id": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
        "imageUrlSmall": "https://eat-seasonal.co.uk/images/food/broccoli.jpg",
        "name": "Beetroot",
      },
    ],
    "id": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
    "name": "January",
    "seasonIndex": 0,
  },
  Object {
    "food": Array [
      Object {
        "id": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
        "imageUrlSmall": "https://eat-seasonal.co.uk/images/food/broccoli.jpg",
        "name": "Beetroot",
      },
    ],
    "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
    "name": "February",
    "seasonIndex": 1,
  },
  Object {
    "food": Array [],
    "id": "f4812071-b0e2-4255-8ccf-e38768ad0c3c",
    "name": "March",
    "seasonIndex": 2,
  },
]
`;

exports[`Get single season with food when the requested season has food data Retrieves a single season with food data 1`] = `
Object {
  "food": Array [
    Object {
      "id": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
      "imageUrlSmall": "https://eat-seasonal.co.uk/images/food/broccoli.jpg",
      "name": "Down Under Beetroot",
    },
  ],
  "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
  "name": "February",
  "seasonIndex": 1,
}
`;

exports[`Get single season with food when the requested season has no food Retrieves a single season 1`] = `
Object {
  "food": Array [],
  "id": "f4812071-b0e2-4255-8ccf-e38768ad0c3c",
  "name": "March",
  "seasonIndex": 2,
}
`;
